added subrows and columns to portfolio page

--- a/index.html
+++ b/index.html
@@ -29,19 +29,16 @@
 
 </div>
     <div class="container box">
-        <div class="row">
-            <div class="col-md-4">
+        <div class="row title">
+            <div class="col-md-12">
                 About Me
-            </div>
-            <div class="col-md-8">
-
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-2 col-md-4 col-lg-4 col-xl-5">
-                <img src="Assets/Images/Rachel Beach copy 2.jpeg" alt="Rachel on the beach in winter">
+            <div class="col-md-3">
+                <img class="bio-photo" src="Assets/Images/Rachel Beach copy 2.jpeg" alt="Rachel on the beach in winter">
             </div>
-            <div class="col-sm-10 col-md-8 col-lg-8 col-xl-7">
+            <div class="col-md-9 bio">
                 Hi there! Welcome to my page... I'm Rachel. I grew up in a teeny, tiny town in the mountains of
                 Arizona.
                 I studied biology in college, but got my first grown-up job in marketing, so stuck with that for a
