--- a/portfolio.html
+++ b/portfolio.html
@@ -27,43 +27,68 @@
         </div>
     </nav>
     <div class="container box">
-        <div class="row mt-4">
+        <div class="row portfolio-image">
             <div class="col-md-3">
             </div>
             <div class="col-md-3">
                 <img src="Assets/Images/Hangman.png" alt="Cartoon drawing of hangman">
+                <div class="row">
+                    <div class="col-sm-12 label">
+                        Hangman
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 offset-md-1">
                 <img src="Assets/Images/Oregon Trail.png" alt="Screenshot of the Oregon Trail game">
+                <div class="row">
+                    <div class="col-sm-12 label">
+                        RPG Game
+                    </div>
+                </div>
             </div>
             <div class="col-md-3">
             </div>
         </div>
-        <div class="row mt-4">
+        <div class="row md-4">
             <div class="col-md-3">
 
             </div>
             <div class="col-md-3">
                 <img src="Assets/Images/Trivia.png" alt="Qutestion mark">
+                <div class="row">
+                    <div class="col-sm-12 label">
+                        Trivia Game
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 offset-md-1">
                 <img src="Assets/Images/widget.png" alt="Unicorn vommiting a rainbow">
+                <div class="row">
+                    <div class="col-sm-12 label">
+                        Rutgers Info Widget
+                    </div>
+                </div>
             </div>
             <div class="col-md-3">
             </div>
         </div>
-        <div class="row mt-4">
+        <div class="row md-4">
             <div class="col-md-3">
 
             </div>
-            <div class="col-md-3" id=>
+            <div class="col-md-3">
                 <img src="Assets/Images/rockpaperscissors.jpg" alt="Cartoon image of rock paper scissors">
+                <div class="row">
+                    <div class="col-sm-12 label">
+                        Rock Paper Scissors
+                    </div>
+                </div>
             </div>
             <div class="col-md-3">
 
             </div>
             <div class="col-md-3">
-            </div>    
+            </div>
         </div>
     </div>
 
@@ -72,5 +97,5 @@
             <small>Copyright &copy;</small>
         </div>
     </footer>
-    
+
 </body>
